# matrix

matrix/: README  VERSION  autogen.sh
matrix/config/: curl-7.80.0.sh  dmalloc-5.5.2.sh  iperf3.sh  openssl-1.1.1k.sh  valgrind-3.15.0.sh
matrix/study/weak_attribute/: a.out  compile.sh  strong_ref.c  weak.c
matrix/tools/bin2array/: bin2array.c
matrix/utils/: Makefile  Makefile.am  Makefile.in  compile.sh  config.h  config.h.in  config.status  configure  configure.ac  hex.c  hex.h  log.h  main.c  os_info.c  os_info.h
matrix/utils/.deps/: hex.Po  main.Po  os_info.Po
matrix/utils/autom4te.cache/: output.1  requests  traces.0  traces.1
matrix/utils/src/: hex.c  main.c
